--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
 <html>
-    
+
+
+<head>
+
+    <link href="style.css" type="text/css" rel="stylesheet">
+    <meta charset= "utf-8">
+    <title>Reservia</title>
+</head>
+<body>
+    <div class="container">
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+</body>
 </html>
