raleway font and code for top nave bar(not displaying for some reason

--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
 
 <head>
 
-    <link href="style.css" type="text/css" rel="stylesheet">
+    <link href="css/style.css" type="text/css" rel="stylesheet">
     <meta charset= "utf-8">
     <title>Reservia</title>
 </head>
 <body>
+    
+    <nav>
+        <ul>
+            <li>Accomodations</li>
+            <li>Activities</li>
+            <li>Sign Up</li>
+        </ul>
+    </nav>
+
+
+    
+
+
     <div class="container">
         <div class="item">1</div>
         <div class="item">2</div>
