attempt to link raleway font

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/8efae7db66.js" crossorigin="anonymous"></script>
     <meta charset= "utf-8">
     <title>Reservia</title>
-   
+    <fontface= raleway href="C:\Users\J\Desktop\gitprojects\Reservia\Raleway\OFL.txt">
 </head>
 
 <body>
